# pydantic-to-schema

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  requirements-dev.txt  setup.cfg
pydantic_to_schema/: __init__.py  exporter.py
