[metadata]
name = pydantic_to_schema
version = 0.0.1
description = Simple pydantic to json schema converter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aorumbayev/pydantic-to-schema
author = Altynbek Orumbayev
author_email = aorumbayev@pm.me
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pydantic
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    pydantic-to-schema = pydantic_to_schema.exporter:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
